<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_boy"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:textSize="@dimen/text_size_nor" />
        <CheckBox
            android:id="@+id/checkbox_les"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Lesbian"
            android:textSize="@dimen/text_size_nor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/checkbox_girl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Female"
            android:textSize="@dimen/text_size_nor" />
        <CheckBox
            android:id="@+id/checkbox_gay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/Gay"
            android:textSize="@dimen/text_size_nor" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/old"
            android:textSize="@dimen/text_size_nor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:orientation="horizontal">

            <EditText

                android:id="@+id/edit_old_to"
                android:layout_width="@dimen/buton_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_smallest"
                android:gravity="center"
                android:inputType="number|textPersonName"

                android:maxLength="2"
                android:textSize="@dimen/text_size_large" />

           <ImageView
               android:layout_marginLeft="@dimen/margin_smallest"
               android:layout_gravity="center"
               android:layout_width="@dimen/love"
               android:layout_height="@dimen/love"
               android:background="@drawable/ic_play_arrow_black_24dp"/>

            <EditText
                android:gravity="center"

                android:id="@+id/edit_old_from"
                android:layout_width="@dimen/buton_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_smallest"
                android:inputType="number|textPersonName"

                android:maxLength="2"
                android:textSize="@dimen/text_size_large"

                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_smallest"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/buton_size"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="@dimen/text_size_nor" />

        <Button
            android:id="@id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/buton_size"
            android:layout_marginLeft="45dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/text_size_nor" />
    </LinearLayout>
</LinearLayout>