<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      tools:context="com.bamboo.blue.LifeChat.Activity.HelpActivity">
<android.support.v7.widget.CardView
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="@dimen/margin_small"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/connect" />

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/text_size_nor"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ket_noi" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/disconect" />

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/text_size_nor"
                android:textColor="@color/red"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngat_ket_noi" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
android:layout_marginTop="@dimen/margin_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/toud"/>
    <LinearLayout

        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/text_size_nor"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chat" />

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/text_size_nor"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/banbe" />
    </LinearLayout>
        <FrameLayout
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <Button
        android:id="@+id/button_ok"
        android:textColor="@color/white"
        android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buton_size"
        android:text="@string/ok"/>
        </FrameLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
</ScrollView>
